# logs-hub

./: .example.env  Cargo.toml
src/: handlers.rs  lib.rs  main.rs  models.rs  state.rs
src/app/: mod.rs
src/app/http/: controller.rs
src/app/http/controllers/: controller.rs
src/app/providers/: app_service_provider.rs  mod.rs
src/bootstrap/: exceptions.rs  mod.rs
src/core/: mod.rs  state.rs
src/core/configs/: app.rs  broadcast.rs  logging.rs  mod.rs
src/routes/: api.rs  console.rs  mod.rs  web.rs
