[package]
name = "logs-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] }
thiserror = "1.0"
serde_json = "1.0"