[package]
name = "kino"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
dotenvy = "0.15"
thiserror = "1.0"
serde_json = "1.0"
